# 26_robomaster

./: README.md
hero/c_board_chassis/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F407IGHX_FLASH.ld  STM32F407IGHX_RAM.ld  STM32F407XX_FLASH.ld  test_robowaker.ioc
hero/c_board_chassis/Config/: daplink.cfg
hero/c_board_chassis/Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
hero/c_board_chassis/Core/Src/: adc.c  can.c  dma.c  gpio.c  i2c.c  iwdg.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
hero/c_board_chassis/User_File/1_Middleware/1_Driver/CAN/: drv_can.cpp
hero/c_board_chassis/User_File/1_Middleware/1_Driver/I2C/: drv_i2c.cpp  drv_i2c.h
hero/c_board_chassis/User_File/1_Middleware/1_Driver/Math/: drv_math.h
hero/c_board_chassis/User_File/1_Middleware/1_Driver/SPI/: drv_spi.cpp
hero/c_board_chassis/User_File/1_Middleware/1_Driver/UART/: drv_uart.cpp
hero/c_board_chassis/User_File/1_Middleware/2_Algorithm/PID/: alg_pid.h
hero/c_board_chassis/User_File/1_Middleware/2_Algorithm/RLS/: alg_rls.cpp
hero/c_board_chassis/User_File/2_Device/AHRS/AHRS_WHEELTEC/: dvc_ahrs_wheeltec.cpp
hero/c_board_chassis/User_File/2_Device/AHRS/AHRS_WIT/: dvc_ahrs_wit.cpp
hero/c_board_chassis/User_File/2_Device/DR16/: dvc_dr16.cpp
hero/c_board_chassis/User_File/2_Device/IMU/: dvc_ahrs_cboard.cpp  dvc_ahrs_cboard.h
hero/c_board_chassis/User_File/2_Device/IMU/DM_IMU/: dvc_dm_imu.cpp  dvc_dm_imu.h
hero/c_board_chassis/User_File/2_Device/Manifold/: dvc_manifold.cpp
hero/c_board_chassis/User_File/2_Device/Motor/Motor_DJI/: dvc_motor_dji.cpp  dvc_motor_dji.h
hero/c_board_chassis/User_File/2_Device/Powermeter/: dvc_powermeter.cpp
hero/c_board_chassis/User_File/2_Device/Referee/: dvc_referee.cpp  dvc_referee.h
hero/c_board_chassis/User_File/2_Device/Serialplot/: dvc_serialplot.cpp
hero/c_board_chassis/User_File/2_Device/Vofa/: dvc_Vofa.cpp  dvc_Vofa.h  dvc_Vofa_Tuner.cpp  dvc_Vofa_Tuner.h
hero/c_board_chassis/User_File/3_Robot/Gimbal/: Gimbal_Control.h
hero/c_board_chassis/User_File/3_Robot/Shoot/: Shoot_Motor_Control.cpp
hero/c_board_chassis/User_File/3_Robot/Slave_Connection_With_Master/: Slave_With_Master.cpp  Slave_With_Master.h
hero/c_board_chassis/User_File/4_Interaction/: ita_robot.cpp  ita_robot.h
hero/c_board_chassis/User_File/5_Task/: tsk_config_and_callback.cpp  tsk_config_and_callback.h
hero/c_board_chassis/User_File/use/: test.cpp  test.h
hero/c_board_chassis/cmake/stm32cubemx/: CMakeLists.txt
hero/dm_mc02_gimbal/: .gitignore  CMakeLists.txt
hero/dm_mc02_gimbal/Config/: daplink.cfg
hero/dm_mc02_gimbal/User_File/2_Device/Aimbot/: dvc_aimbot.cpp  dvc_aimbot.h
hero/dm_mc02_gimbal/User_File/2_Device/BMI088/: BMI088_Driver.c  BMI088_Driver.h  BMI088_Reg.h  QuaternionEKF.c  QuaternionEKF.h  imu.cpp  imu.h  kalman_filter.c  kalman_filter.h
hero/dm_mc02_gimbal/User_File/2_Device/Class_Timer/: class_timer.cpp  class_timer.h
hero/dm_mc02_gimbal/User_File/2_Device/DM_IMU/: dvc_dm_imu.cpp
hero/dm_mc02_gimbal/User_File/2_Device/Image_Transform/: dvc_image_transform.cpp  dvc_image_transform.h
hero/dm_mc02_gimbal/User_File/2_Device/Referee/: dvc_referee.h
hero/dm_mc02_gimbal/User_File/3_Robot/Chassis/: Chassis_Control.cpp  Chassis_Control.h
hero/dm_mc02_gimbal/User_File/3_Robot/Gimbal/: Gimbal_Control.cpp  Gimbal_Control.h
hero/dm_mc02_gimbal/User_File/4_Interaction/: ita_robot.cpp  ita_robot.h
hero/dm_mc02_gimbal/User_File/5_Task/: tsk_config_and_callback.cpp  tsk_config_and_callback.h
infantry/dm_hc02_chassis/: CMakeLists.txt
infantry/dm_hc02_chassis/User_File/4_Interaction/: ita_robot.cpp  ita_robot.h
infantry/dm_hc02_chassis/User_File/5_Task/: tsk_config_and_callback.cpp
(+29 files in other folders)
